--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fmasgrau.github.io/curriculum",
   "name": "curriculum",
   "version": "0.1.0",
   "private": true,
@@ -13,13 +14,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "boxicons": "^2.0.9",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "i18next": "^20.4.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -30,7 +36,9 @@
     "eject": "react-scripts eject",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +69,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "postcss": "^7.0.36",
