--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://fmasgrau.github.io/curriculum",
   "name": "curriculum",
   "version": "0.1.0",
   "private": true,
@@ -10,13 +9,13 @@
     ]
   },
   "dependencies": {
-    "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "boxicons": "^2.0.9",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "i18next": "^20.4.0",
     "node-sass": "^4.14.1",
@@ -30,9 +29,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
